# 3d-game

./: Cargo.toml  README.md
content/: floor.mtl
engine/: Cargo.toml
engine/src/: collision.rs  components.rs  geom.rs  lib.rs  lights.rs  model.rs  render.rs  screen.rs  shader.frag  shader.frag.spv  text.rs  texture.rs  world.rs
game-3d/: Cargo.toml
game-3d/src/: main.rs
