[package]
name = "engine3d"
version = "0.1.0"
authors = ["Maddy Dortignacq, Brandon Mitchell, Avalon Vinella"]
edition = "2018"

[dependencies]

anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
futures = "0.3"
image = "0.23"
log = "0.4"
tobj = "2.0"
wgpu = "0.7"
winit = "0.24.0"
notify = "4.0.15"
winit_input_helper = "0.6.0"
savefile = "0.7.4"
savefile-derive = "0.7.4"
pixels = "0.3.0"
fontdue = "0.4.0"
kira = "0.5.1"

#serde = { version = "1.0", features = ["derive"] }

[dependencies.gltf]
version="0.15.2"
features=["utils","import","names"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
shaderc = "0.7"
