[package]
name = "game-3d"
version = "0.1.0"
authors = ["Maddy Dortignacq, Brandon Mitchell, Avalon Vinella"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine3d = {path = "../engine/"}
env_logger = "0.7"
rand = "0.8.3"
winit = "0.24.0"
cgmath = "0.18"
winit_input_helper = "0.6.0"
savefile = "0.7.4"
savefile-derive = "0.7.3"
#pixels = "0.2.0"